# bluesky-crowdin-turkish-translation-reporter

./: .env.example  README.md  config.py  main.py  notification.py  pyproject.toml  type.py
.github/workflows/: cronjob.yml
