[project]
name = "bluesky-crowdin-turkish-translation-reporter"
version = "0.1.0"
description = "Bluesky Crowdin Turkish Translation Reporter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "selenium>=4.0.0",
    "requests>=2.25.0",
]
